# personal-finance-agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  package-lock.json  pyproject.toml  render.yaml  requirements.txt
app/: main.py
app/agents/: classifier.py  mortgage.py  paystub.py  reconciliation.py  statement.py
app/core/: config.py  logging.py
app/databases/: __init__.py
app/dependencies/: __init__.py
app/models/: __init__.py  document.py  memo_balance.py  period.py  stated_balance.py
app/routes/: accounts.py  dashboard.py  documents.py  journal.py  landing.py  ledger.py  periods.py  reconciliation.py  transactions.py
app/schemas/: __init__.py  account.py  api_responses.py  journal.py  memo_balance.py  period.py  raw_transaction.py  reconciliation.py  review_queue.py  stated_balance.py
app/services/: classify.py  dashboard.py  document.py  file_readers.py  parse.py  period.py  reconciliation.py  stated_balance.py  statement_mapper.py  statements.py
app/templates/: accounts.html  base.html  dashboard.html  landing.html  ledger.html  statements.html
backend/: alembic.ini
backend/alembic/: env.py
backend/app/: main.py
backend/scripts/: create_user.py  diagnose_ej_roth_march.py
backend/tests/: conftest.py  test_accounts.py  test_auth.py  test_parse.py  (+12 more)
frontend/: index.html  package-lock.json  package.json  vite.config.ts
tests/: test_classify.py  test_database.py  test_documents.py  test_journal.py  test_ledger.py  test_parse.py  test_periods.py  test_reconciliation.py  test_stated_balances.py  test_statements.py
(+112 files in other folders)
