[project]
name = "personal-finance-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.0",
    "greenlet>=3.4.0",
    "openpyxl>=3.1.5",
    "pdfplumber>=0.11.9",
    "pydantic>=2.13.3",
    "pydantic-ai[anthropic]>=1.85.1",
    "pydantic-settings>=2.14.0",
    "python-multipart>=0.0.26",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.45.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["backend"]
testpaths = ["backend/tests"]
